--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="Home" />
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".NewJobDetailsActivity"
             android:label="New Job Details"
