--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,8 +51,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.NewUserRegistrationActivity"
-            android:label="New User Registration">
+            android:name=".onboard.NewUserRegistrationActivity"
+            android:label="New User Registration"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity
+            android:name=".onboard.LocationPermissionActivity"
+            android:label="New User Registration"
+            android:parentActivityName=".onboard.NewUserRegistrationActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".onboard.NewUserRegistrationActivity" />
         </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
