--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,12 @@
             android:name=".services.RegistrationIntentService"
             android:exported="false">
         </service>
+        <service
+            android:name=".services.FetchAddressIntentService"
+            android:exported="false"/>
+        <service
+            android:name=".services.FetchLocationIntentService"
+            android:exported="false"/>
 
     </application>
 
