--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,6 +111,9 @@
         <service
             android:name=".services.SubmitNewJobService"
             android:exported="false"/>
+        <service
+            android:name=".services.PostcodesIntentService"
+            android:exported="false"/>
 
     </application>
 
