Job View Refactor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,14 @@
 
         </activity>
         <activity
+            android:name=".activity.JobSummaryViewActivity"
+            android:label="Job Summary"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
             android:name=".activity.JobDetailViewActivity"
             android:label="Job Details"
             android:parentActivityName=".MainActivity">
