--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.stripe:stripe-android:+'
+    compile 'com.github.dbachelder:CreditCardEntry:1.4.7'
 }
