Fine Tune Tweaks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <permission android:name="com.demandnow.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
@@ -32,7 +33,7 @@
             android:label="@string/app_name"></activity>
         <activity
             android:name=".NewJobDetailsActivity"
-            android:label="New Job Details"
+            android:label="New Job Request"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -143,6 +144,9 @@
         <service
             android:name=".services.PostcodesIntentService"
             android:exported="false"/>
+        <service
+            android:name=".services.CloudinaryUploadService"
+            android:exported="false"></service>
 
         <meta-data
             android:name="io.fabric.ApiKey"
