--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.stripe:stripe-android:+'
     compile 'com.github.dbachelder:CreditCardEntry:1.4.7'
+    compile 'com.github.jkwiecien:EasyImage:1.1.2'
+    compile files('libs/cloudinary-android-1.2.2.jar')
+    compile files('libs/cloudinary-core-1.2.2.jar')
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
